--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                                 assets/images/lead-shelf@3x.webp 3x"
                 />
                 <img
-                        class="lead__image image"
+                        class="image"
                         src="assets/images/lead-shelf.jpg"
                         srcset="assets/images/lead-shelf@2x.jpg 2x,
                                 assets/images/lead-shelf@3x.jpg 3x"
@@ -284,9 +284,9 @@
             </li>
             <li class="place">
                 <h2 class="place__title container">Зимний Байкал</h2>
-                <div class="place__website container">
-                    <h3 class="place__url-heading">URL</h3>
-                    <a class="place__link hover-opacity" href="https://vk.com/baikalmile" target="_blank"
+                <div class="place__website website container">
+                    <h3 class="website__url-heading">URL</h3>
+                    <a class="website__link hover-opacity" href="https://vk.com/baikalmile" target="_blank"
                        rel="noopener">https://vk.com/baikalmile</a>
                 </div>
 
