--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body class="page font">
 <header class="header container">
-    <img class="header__logo" src="assets/images/header-logo.svg" alt="Логотип 'Россия'">
+    <a class="hover-opacity" href="/">
+        <img class="header__logo" src="assets/images/header-logo.svg" width="177" height="52" alt="Логотип 'Россия'">
+    </a>
     <ul class="header__lang-menu">
         <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
         <li><a class="header__lang-link" href="#">En</a></li>
@@ -31,14 +33,14 @@
                 <source
                         type="image/webp"
                         srcset="assets/images/lead-shelf.webp,
-                                assets/images/lead-shelf@2x.webp 2x,
-                                assets/images/lead-shelf@3x.webp 3x"
+                                    assets/images/lead-shelf@2x.webp 2x,
+                                    assets/images/lead-shelf@3x.webp 3x"
                 />
                 <img
                         class="image"
                         src="assets/images/lead-shelf.jpg"
                         srcset="assets/images/lead-shelf@2x.jpg 2x,
-                                assets/images/lead-shelf@3x.jpg 3x"
+                                    assets/images/lead-shelf@3x.jpg 3x"
                         alt="Поездка в поезде"
                         width="984"
                         height="615">
