--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     </section>
 </main>
 <footer class="footer page__footer">
-    <div class="footer__inner container">
+    <div class="footer__flex-wrapper container">
         <nav>
             <ul class="footer__links">
                 <li>
