--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+          content="Мы выбрали и описали некоторые интересные места в России, достойные вашего отпуска">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="apple-touch-icon-precomposed" href="rusemblem-favico.png" sizes="27x27">
+    <link rel="shortcut icon" href="rusemblem-favico.png" sizes="27x27">
     <link rel="preload" href="assets/fonts/Inter-Regular.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="assets/fonts/Inter-Bold.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="assets/fonts/Inter-ExtraBold.woff2" as="font" crossorigin="anonymous">
@@ -29,21 +32,38 @@
                 новостей, а здесь.</p>
         </div>
         <div class="lead__bg-image">
+            <!--            <picture>-->
+            <!--                <source media="(min-width: 768px)" srcset="img/photo-1-tablet.jpg 1x, img/photo-1-tablet@2x.jpg 2x">-->
+            <!--                <img class="works-item__image" src="img/photo-1-mobile.jpg" srcset="img/photo-1-mobile@2x.jpg 2x" alt="Пример нашей работы">-->
+            <!--            </picture>-->
             <picture>
                 <source
+                        media="(min-width: 1024px)"
                         type="image/webp"
                         srcset="assets/images/lead-shelf.webp,
                                     assets/images/lead-shelf@2x.webp 2x,
                                     assets/images/lead-shelf@3x.webp 3x"
                 />
+                <source
+                        type="image/webp"
+                        srcset="assets/images/lead-shelf-tablet.webp,
+                                    assets/images/lead-shelf-tablet@2x.webp 2x,
+                                    assets/images/lead-shelf-tablet@3x.webp 3x"
+                />
+                <source
+                        media="(min-width: 1024px)"
+                        srcset="assets/images/lead-shelf.jpg,
+                                    assets/images/lead-shelf@2x.jpg 2x,
+                                    assets/images/lead-shelf@3x.jpg 3x"
+                />
                 <img
                         class="image"
-                        src="assets/images/lead-shelf.jpg"
-                        srcset="assets/images/lead-shelf@2x.jpg 2x,
-                                    assets/images/lead-shelf@3x.jpg 3x"
-                        alt="Поездка в поезде"
-                        width="984"
-                        height="615">
+                        src="assets/images/lead-shelf-tablet.jpg"
+                        srcset="assets/images/lead-shelf-tablet@2x.jpg 2x,
+                                    assets/images/lead-shelf-tablet@3x.jpg 3x"
+                        alt="Женщина лежит в поезде на полке"
+                        width="768"
+                        height="480">
             </picture>
         </div>
         <p class="lead__caption container">ваша полка — верхняя</p>
